style: modal z-index problem fix

--- a/frontend-react/src/assets/style/components/Modal.scss
+++ b/frontend-react/src/assets/style/components/Modal.scss
@@ -5,15 +5,15 @@
     left: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.65);
-    z-index: 20;
+    z-index: 50;
 }
 
 .modal {
     position: absolute;
+    z-index: 51;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 21;
     background-color: #ddd;
     color: #333;
     border-radius: 5px;
