--- a/frontend-react/src/assets/style/index.scss
+++ b/frontend-react/src/assets/style/index.scss
@@ -39,7 +39,7 @@
   background-color: $darkPit;
 
   &:hover {
-    background-color: darken($darkPit, 5%);
+    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.5);
   }
 }
 
